# glamira-end-to-end-data-pipeline

./: README.md  SETUP_GUIDE.md
 7.data-transformation-visualization/: pyproject.toml
 7.data-transformation-visualization/dbt-project-glamira/: dbt_project.yml
 7.data-transformation-visualization/dbt-project-glamira/models/: _sources.yml
 7.data-transformation-visualization/dbt-project-glamira/models/dimensions/: dim_customer.sql  dim_date.sql  dim_location.sql  dim_product.sql  dim_session_context.sql
 7.data-transformation-visualization/dbt-project-glamira/models/facts/: fact_sales_order.sql
 7.data-transformation-visualization/dbt-project-glamira/models/staging/: stg_summary.sql  stg_summary_date_range.sql
 7.data-transformation-visualization/src/data-pipeline-storage/: export_to_GCS.py
5.data-collection-storage/: ip_processor.py  product_crawler.py
6.data-pipeline-storage/: trigger_bigquery_load.py
